# grepsearch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/grepsearch/: Cargo.toml
crates/grepsearch-py/: Cargo.toml  README.md  pyproject.toml
crates/grepsearch-py/python/grepsearch/: __init__.py  __init__.pyi
crates/grepsearch-py/src/: lib.rs
crates/grepsearch-py/tests/: test_grepsearch.py
crates/grepsearch/src/: budget.rs  error.rs  files.rs  search.rs  types.rs  walk.rs
crates/grepsearch/tests/: files.rs  read.rs
crates/grepsearch/tests/fixtures/src/: lib.rs
scripts/: release.sh
src/: engine.rs  lib.rs  read.rs
tests/: files.rs  search.rs  walk.rs
tests/fixtures/: .hidden.txt  notes.md  script.py
tests/fixtures/src/: main.rs
tests/snapshots/: search__grep_authenticate.snap
