[workspace]
resolver = "2"
members = ["crates/grepsearch", "crates/grepsearch-py"]

[workspace.package]
version = "0.1.54"
edition = "2024"
license = "MIT"
repository = "https://github.com/jagguvarma15/grepsearch"

[workspace.dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
