[package]
name = "grepsearch-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the grepsearch retrieval library"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
grepsearch = { path = "../grepsearch", version = "0.1" }
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
serde = { workspace = true }
serde_json = { workspace = true }
