[package]
name = "grepsearch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Index-free grep-based retrieval primitives for agent tool loops"
readme = "../../README.md"
keywords = ["grep", "search", "retrieval", "agent"]
categories = ["text-processing", "filesystem"]

[dependencies]
clap = { version = "4.6.3", features = ["derive"], optional = true }
globset = "0.4.19"
grep = "0.4.1"
ignore = "0.4.31"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.19"

[features]
cli = ["dep:clap"]

[[bin]]
name = "grepsearch"
path = "src/bin/grepsearch.rs"
required-features = ["cli"]

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }
tempfile = "3.27.0"
